--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -25,10 +25,8 @@
     <item android:id="@+id/menu_window_list"
         android:title="@string/window_list"
         android:icon="@drawable/ic_menu_windows" />
-    <item android:id="@+id/menu_toggle_soft_keyboard"
-        android:title="@string/toggle_soft_keyboard" />
-    <item android:id="@+id/menu_special_keys"
-        android:title="@string/special_keys" />
+    <!--<item android:id="@+id/menu_toggle_soft_keyboard"
+        android:title="@string/toggle_soft_keyboard" />-->
     <item android:id="@+id/menu_preferences"
         android:title="@string/preferences"
         android:icon="@drawable/ic_menu_preferences" />
